# ESPlayer

./: .gitignore  CMakeLists.txt  pyproject.toml  sdkconfig.defaults
components/minimp3/: CMakeLists.txt  minimp3.h  minimp3_impl.c
main/: CMakeLists.txt  audio_dither.c  audio_dither.h  audio_dsp.c  audio_dsp.h  audio_eq.c  audio_eq.h  audio_pipeline.c  audio_pipeline.h  bt_a2dp_source.c  bt_a2dp_source.h  config.h  hearing_cal.c  hearing_cal.h  main.c  sd_manager.c  sd_manager.h  ui_display.c  ui_display.h  ui_touch.c  ui_touch.h
test/: dsp_test  dsp_test.c
test/measure/: baseline.json  capture_and_compare.py  metrics.py  reference_curves.py  run_measurements.py  test_dither.py
test/stubs/: esp_err.h  esp_heap_caps.h  esp_log.h
